# spotify-recommend-python

./: .gitignore  README.md  setup.cfg
src/: main.py  spotify.py
tests/: Spotify.ipynb
