[metadata]
# replace with your username:
name = spotify-recommend-nick-cheatwood7
version = 1.0.0
author = Nicolas Cheatwood
author_email = nscheatw@bsc.edu
description = A small Spotify recommendation engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nick-cheatwood7/spotify-recommend-python
project_urls =
    Bug Tracker = https://github.com/nick-cheatwood7/spotify-recommend-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src